--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,101 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "WorldWumpus.sln"
+    "dotnet.defaultSolution": "WorldWumpus.sln",
+    "cSpell.words": [
+        "ações",
+        "Adicionar",
+        "Adicione",
+        "agiu",
+        "Aguarda",
+        "aleatória",
+        "aleatoriamente",
+        "alguma",
+        "aqui",
+        "armazenado",
+        "armazenar",
+        "atendida",
+        "ativado",
+        "ativar",
+        "atual",
+        "audiosource",
+        "Behaviour",
+        "botão",
+        "Breezer",
+        "brilho",
+        "brisa",
+        "caiu",
+        "condição",
+        "conection",
+        "conexão",
+        "Contador",
+        "Contadores",
+        "corrotina",
+        "criação",
+        "criar",
+        "DATETIME",
+        "Declara",
+        "deseleção",
+        "direcao",
+        "encontrou",
+        "específica",
+        "esta",
+        "existe",
+        "existente",
+        "existentes",
+        "fedor",
+        "Flechas",
+        "Gerar",
+        "Inicia",
+        "iniciais",
+        "inicial",
+        "Inicializa",
+        "iniciar",
+        "inicio",
+        "jogador",
+        "jogo",
+        "linha",
+        "Lista",
+        "Mathf",
+        "matou",
+        "mesma",
+        "método",
+        "métodos",
+        "morreu",
+        "mortos",
+        "movimento",
+        "nada",
+        "novamente",
+        "ocasionalmente",
+        "ocupar",
+        "ouro",
+        "passos",
+        "pendentes",
+        "percebe",
+        "percepção",
+        "poço",
+        "posição",
+        "pouco",
+        "Prefs",
+        "próprios",
+        "referenciar",
+        "Referências",
+        "resetar",
+        "seleção",
+        "selecionado",
+        "seus",
+        "simulação",
+        "tabela",
+        "tarefas",
+        "Termina",
+        "Texto",
+        "tropeçou",
+        "único",
+        "Usar",
+        "variável",
+        "Verificar",
+        "Verifique",
+        "Você",
+        "Wumpus"
+    ]
 }
