--- a/.gitignore
+++ b/.gitignore
@@ -51,7 +51,7 @@ ExportedObj/
 *.pidb.meta
 *.pdb.meta
 *.mdb.meta
-
+Assets/PlayerActionsLog.db
 # Unity3D generated file on crash reports
 sysinfo.txt
 
